--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.159.0",
+    "vite-plugin-glsl": "^1.2.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
