added a new pattern for the shader transition

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "maath": "^0.10.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resolve-lygia": "^1.0.4",
     "three": "^0.159.0",
     "vite-plugin-glsl": "^1.2.1",
     "zustand": "^4.4.7"
